--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl: /harmony
 
 # Site live URL
-url: http://gayan.me
+url: http://zjengjie.github.io
 
 # Localhost 
 # url: http://127.0.0.1:4000  
