--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           pretty
 # Setup
 title:               Hello World
 tagline:             'code life'
-description:         ''
+description:         'nothing'
 url:                 http://zjengjie.github.io
 baseurl:             ''
 paginate:            5
