--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 title:               Hello World
 tagline:             'code life'
 description:         'nothing'
-url:                 http://zjengjie.github.io
+url:                 http://nishisbma.com
 baseurl:             ''
 paginate:            5
 excerpt_separator:   '<!-- more -->'
