--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               Hello World
 tagline:             'code life'
 description:         'nothing'
 url:                 https://nishisbma.com
-# enforce_ssl:         nishisbma.com
+enforce_ssl:         nishisbma.com
 baseurl:             ''
 paginate:            5
 excerpt_separator:   '<!-- more -->'
