--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,23 @@ sass:
   sass_dir:          _sass
   style:            :compressed
   
+# More › http://kramdown.gettalong.org/quickref.html
+# Options › http://kramdown.gettalong.org/options.html
+kramdown:
+  input:            GFM
+  # https://github.com/jekyll/jekyll/pull/4090
+  syntax_highlighter: rouge
+
+  # Rouge Highlighter in Kramdown › http://kramdown.gettalong.org/syntax_highlighter/rouge.html
+  # span, block element options fall back to global
+  syntax_highlighter_opts:
+    #line_numbers: true # bad idea, spans don't need linenos and would inherit this option
+    span:
+      line_numbers:  false
+    block:
+      line_numbers:  true
+      start_line: 1
+  
 # About/contact
 author:
   name:              Zeng Jie
